# ttrpg-ocr

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
config/: a_dead_mans_debt.yaml  all_at_sea.yaml  bad_tidings.yaml  blades_in_the_dark.yaml  bloody_journey_towards_astra.yaml  chaos_again.yaml  cut_roots.yaml  dieter_v.yaml  dying_of_the_light.yaml  forest_of_hate.yaml  grapes_of_wrath.yaml  horror_of_hugedal.yaml  if_looks_could_kill.yaml  kidnapped.yaml  marienburg.yaml  marienburg2e.yaml  night_of_blood.yaml  oldenhaller.yaml  the_altdorf_chronicles.yaml  the_dogs_of_death.yaml  the_golden_grin.yaml  the_marienburg_chronicles.yaml  the_wreck_of_the_butterfly.yaml  to_love_and_die_in_marienburg.yaml  warpstone23.yaml  warpstone24.yaml  warpstone26.yaml  warpstone5.yaml  warpstone9.yaml  willkomm_en_marienburg.yaml  witch_hunter.yaml  worse_than_the_disease.yaml
notebooks/: ide.ipynb
src/: schemas.py
src/ttrpg_ocr/: assemble.py  classify.py  extract_chapters.py  extract_ocr.py  extract_text.py  ingest.py  inspect.py  pipeline.py  profiles.py  schemas.py
tests/: test_column_detection.py  test_integration.py
